ingress/Hostnamebased/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: test
  labels:
    app: nginx-app1

spec:
  type: NodePort
  selector:
    app: nginx-app1 # Matches the label used in the Deployment
  ports:
  - port: 80
    targetPort: 80 # Must match the containerPort of the pod
    protocol: TCP
