ingress/Hostnamebased/ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostbased-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: nginx-nodeport
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: httpd-nodeport
            port:
              number: 80
  - host: foo.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: nginx-nodeport
            port:
              number: 80
  - host: "*.foo.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: httpd-nodeport
            port:
              number: 80
